# lore-cli

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  config.example.toml  config.toml
src/: app.rs  cache.rs  config.rs  event.rs  main.rs  model.rs  series.rs  ui.rs
src/lore/: atom.rs  mbox.rs  mod.rs  status.rs
